# tympan-ladspa

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md  deny.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: handoff.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  handoff-protocol.md  overview.md  plugin-author-guide.md  references.md
docs/decisions/: 0001-skip-run-adding.md  0002-ports-as-const-slice.md  0003-trait-only-no-derive-macro.md  0004-no-global-state-multi-instance.md  0005-ci-verification-strategy.md  0006-i18n-policy.md  README.md
examples/delay/: Cargo.toml  README.md
examples/delay/src/: lib.rs
examples/gain/: Cargo.toml  README.md
examples/gain/src/: lib.rs
examples/gain/tests/: no_alloc.rs
examples/noise-gate/: Cargo.toml  README.md
examples/noise-gate/src/: lib.rs
src/: descriptor.rs  entry.rs  error.rs  lib.rs  macros.rs  plugin.rs  port.rs
src/raw/: descriptor.rs  mod.rs  types.rs
src/realtime/: context.rs  log.rs  mod.rs  ring.rs
