[package]
name = "tympan-gain"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Minimal LADSPA gain plugin built on tympan-ladspa"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tympan-ladspa = { path = "../.." }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
undocumented_unsafe_blocks = "warn"
